src/Gui/app.css
html {
    background: #fff0c5ff;
    background-size: cover;
}

button {
    background-color: #fff0c5ff;
    border-style: none;
}

.hidden {
    display: none;
}

/*
 Start all funkly specific css class names funkly- to avoid collision with bootstrap and blockly css naming schemes
 */

.funkly-container {
    height: 100%;
    width: 100%;
    background: #fff0c5ff;
    display: grid;
    grid-template-columns: repeat(3, 33vw);
    grid-template-rows: repeat(10, 10vh);
    grid-column-gap: 0.5vw;
    grid-row-gap: 0.5vh;
}

.funkly-title {
    grid-area: 1 / 1 / 2 / 2; 
}

.funkly-buttons {
    grid-area: 1 / 3 / 2 / 4;
    display: flex;
}

.funkly-button-icon {
    width: 100%;
    height: auto;
}

.funkly-blockly-editor {
    position:relative;
    grid-area: 2 / 1 / 11 / 3; 
}

.funkly-blockly-div {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.funkly-engine {
    grid-area: 2 / 3 / 7 / 4;
}

.game-area {
    background-color: #0571f5;
    width: 575px;
    height: 405px;
}

.funkly-char-selection {
    grid-area: 7 / 3 / 11 / 4;
    background-color: #7cdceb;
}

.funkly-debug {
    /* TODO: get this to place _under_ the main blockly view*/
    top: 100vh;
    position: absolute;
}
.funkly-statemap{
    background: orange;
    width: 500px;
    top: 100vh; 
    position: absolute;
}


.blocklyToolboxDiv {
    background-color: #fff0c5ff;
}


.blocklyTreeRow {
    margin-bottom: 0px;
    margin-top: 20px;
}

.blocklyTreeLabel {
    /*cursor: default;
    font-family: sans-serif;*/
    font-size: 18px; /*alle 20 oikealle tulee rako??*/
    /*padding: 0 6px;*/
    padding-top: 0px;
    padding-right: 5px;
    padding-bottom: 0px;
    padding-left: 5px;
    /*vertical-align: middle;*/
}

/* Tällä vaihdetaan blockly kategorioiden hover väriä */ 
.blocklyTreeRow:not(.blocklyTreeSelected):hover {
   background-color: #ededed;
}
    
.blocklyFlyoutBackground {
    fill: #ededed;
    fill-opacity: .8;
}

